fix overflowing text

--- a/public/css/survival.css
+++ b/public/css/survival.css
@@ -44,23 +44,21 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  max-width: 90%;
+  max-width: 95%;
 }
 
 h1 {
-  width: 95vw;
+  width: 90vw;
   height: 50%;
-  padding: 0 10px;
+  /* padding: 0 10px; */
   font-size: 1.2rem;
-  margin-top: 10px;
-  margin-bottom: 10px;
-
+  margin: 10px auto;
   color: #f5f5f5;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   text-align: center;
 }
 #buttonHolder {
-  width: 95%;
+  width: 90vw;
   height: 20%;
   display: flex;
   flex-direction: column;
@@ -109,7 +107,7 @@ button:active {
 @media screen and (min-width: 400px) {
   h1 {
     font-size: 1.2rem;
-    width: 60vw;
+    width: 65vw;
     margin-top: 50px;
   }
   button {
